# cleanvey

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  app.py  pyproject.toml  requirements-llm.txt  requirements.txt
.github/workflows/: ci.yml
cleanvey/: __init__.py  cli.py  config.py  engine.py  llm.py  report.py  schema.py  scoring.py
cleanvey/rules/: __init__.py  base.py  contradiction.py  duplicate.py  logic_check.py  low_effort.py  missing.py  near_duplicate.py  openend.py  out_of_range.py  pattern.py  repeated_token.py  self_duplicate.py  speeding.py  straightlining.py  too_short.py
config/: default_rules.yaml
docs/: methodology.md  rules.md
sample_data/: demo_survey.xlsx  generate_sample.py
templates/: base.html  index.html  mapping.html  result.html
tests/: conftest.py  test_engine.py  test_rules.py
