[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanvey"
version = "0.1.0"
description = "An explainable quality-control toolkit for survey data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cleanvey Contributors" }]
keywords = ["survey", "data-quality", "nps", "qc", "market-research", "data-cleaning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "Flask>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "rapidfuzz>=3.0",
    "PyYAML>=6.0",
    "anthropic>=0.40",     # LLM "judge" (core); set ANTHROPIC_API_KEY to use
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
cleanvey = "cleanvey.cli:main"

[project.urls]
Homepage = "https://github.com/frankglendon/cleanvey"
Issues = "https://github.com/frankglendon/cleanvey/issues"

[tool.setuptools]
# The installable distribution is the library + CLI. The web UI (app.py +
# templates/) is run from a clone; `cleanvey check` works anywhere.
packages = ["cleanvey", "cleanvey.rules"]
